<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>no.ssb.rawdata.converter</groupId>
  <artifactId>rawdata-converter-testutils</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <properties>
    <jdk.version>14</jdk.version>
    <maven.compiler.target>${jdk.version}</maven.compiler.target>
    <maven.compiler.source>${jdk.version}</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <lombok.version>1.18.12</lombok.version>
    <rawdata-converter-core.version>0.3.0-SNAPSHOT</rawdata-converter-core.version>
    <junit5.version>5.6.2</junit5.version>
  </properties>
  <scm>
    <connection>scm:git:git://github.com/statisticsnorway/rawdata-converter-testutils.git</connection>
    <developerConnection>scm:git:git@github.com:statisticsnorway/rawdata-converter-testutils.git</developerConnection>
    <url>https://github.com/statisticsnorway/rawdata-converter-testutils</url>
    <tag>HEAD</tag>
  </scm>

  <dependencies>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>no.ssb.rawdata</groupId>
      <artifactId>rawdata-client-api</artifactId>
      <version>0.23</version>
    </dependency>

    <!-- TEST -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit5.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit5.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>--enable-preview</argLine>
            <detail>true</detail>
            <includes>
              <include>%regex[.*]</include>
            </includes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <release>${jdk.version}</release>
            <compilerArgs>
              <arg>-parameters</arg>
              <arg>--enable-preview</arg>
            </compilerArgs>
            <annotationProcessorPaths>
                  <path>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                    <version>${lombok.version}</version>
                  </path>
            </annotationProcessorPaths>
          </configuration>
          <executions>
            <execution>
              <id>test-compile</id>
              <goals>
                <goal>testCompile</goal>
              </goals>
              <configuration>
                <compilerArgs>
                  <arg>-parameters</arg>
                  <arg>--enable-preview</arg>
                </compilerArgs>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>ssb-bip</id>
      <repositories>
        <repository>
          <id>ssb-bip-releases</id>
          <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
        </repository>
        <repository>
          <id>ssb-bip-snapshots</id>
          <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
        </repository>
      </repositories>
      <distributionManagement>
        <repository>
          <id>ssb-bip-releases</id>
          <name>SSB Nexus Releases</name>
          <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
          <id>ssb-bip-snapshots</id>
          <name>SSB Snapshot Repository</name>
          <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>
  </profiles>
</project>
